--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -1,23 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-binance
+  name: api-binance-v2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api-binance
+      app: api-binance-v2
   template:
     metadata:
       labels:
-        app: api-binance
+        app: api-binance-v2
     spec:
-      serviceAccountName: backendapi
       containers:
-      - name: api-binance
+      - name: api-binance-v2
         image: {IMAGE_TAG}
         ports:
-        - containerPort: 8989
+        - containerPort: 9090
         resources:
           # You must specify requests for CPU to autoscale
           # based on CPU utilization
