--- a/deploy/k8s/services.yaml
+++ b/deploy/k8s/services.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-binance
+  name: api-binance-v2
 spec:
   selector:
-    app: api-binance
+    app: api-binance-v2
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8989
+      targetPort: 9090
   type: ClusterIP
