--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -14,7 +14,7 @@ spec:
       paths:
       - backend:
           service:
-            name: api-binance
+            name: api-binance-v2
             port:
               number: 8080
         pathType: Prefix
